# JarvisIR

./: .gitignore  .gitmodules  LICENSE  README.md  demo_gradio.py  inference.py  requirements.txt  train.sh
degradation_synthesis/: README.md  fog_syn.py  night_syn.py  rainy_syn.py  requirements.txt  snow_syn.py
degradation_synthesis/fog/: fog_simulator.py
degradation_synthesis/night/: night_simulator.py
degradation_synthesis/snow/: cyclegan_turbo.py
dependences/IQA-PyTorch/: requirements.txt
dependences/llamaOld/: pyproject.toml
dependences/llamaOld/llama_361/: __init__.py  modeling_llama_.py
dependences/qalign/: modeling_llama2.py  modeling_mplug_owl2.py
docs/: gradio_demo.md  gradio_demo_and_inference.md  inference.md  mrrhf_training.md  navigation.md  quick_start_navigation.md  sft_training.md
package/: README.md  pyproject.toml
package/agent_tools/: __init__.py  iqa_reward.py  restoration_toolkit.py  tool_testing_api.py
package/agent_tools/ESRGAN/: inference.py
package/agent_tools/HVICIDNet/: inference.py
package/agent_tools/IDT/: inference.py
package/agent_tools/KANet/: LD_model1.py  base_networks.py  inference.py  transweather_model.py
package/agent_tools/LightenDiffusion/: inference.py
package/agent_tools/RIDCP/: inference.py  requirements.txt  setup.py
package/agent_tools/Retinexformer/: README.md  inference.py  setup.py
package/agent_tools/S2Former/: UDR_S2Former.py  base_net_snow.py  condconv.py  inference.py
src/mrrhf/: generate_offline_data.py  ppo_main.py  ppo_training_utils.py  rlhf_engine.py
src/sft/: llava_8b_full.py
(+92 files in other folders)
